# flask-terminal

./: README.md  app.py  pyproject.toml
.github/workflows/: python-publish.yml
flask_terminal/: __init__.py  terminal_blueprint.py
flask_terminal/config/: logger_config.py
flask_terminal/handlers/: terminal_session_handler.py
flask_terminal/static/flask-terminal/js/: terminal.js
flask_terminal/templates/flask-terminal/: terminal.html
