[tool.poetry]
name = "flask-terminal"
version = "0.0.0"
description = "Browser based terminal for flask, use with hyper HYPER caution"
authors = ["patrick o'leary <pjaol@pjaol.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.2"



[tool.poetry-dynamic-versioning]
enable = true
[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
